--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <nav class="navbar"> 
             <img src="assets/images/logo.png" width="100" height="70" alt="Representación visual de la marca">
 
-            <ul>
+            <ul class="list">
                 <li>Inicios</li>
                 <li>Servicios</li>
                 <li>Sobre nosotros</li>
