--- a/index.html
+++ b/index.html
@@ -47,84 +47,85 @@
                 <li>Sobre nosotros</li>
             </ul>
 
-            <button>Contáctanos</button>
+            <button class="button">Contáctanos</button>
         </nav>
     </header>
 
-<main>
-  <section class="jumbotron"> 
-    <h1>Jumbotron de la pagina principal</h1>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
-    <button>Únete a nosotros</button>
-  </section>
+ <main>
+   <section class="jumbotron"> 
+     <h1>Jumbotron de la pagina principal</h1>
+     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
+     <button class="button">Únete a nosotros</button>
+    </section>
 
 
-  <div>
-    <img src="https://img.freepik.com/foto-gratis/concepto-sostenibilidad-plantas-que-crecen-partir-formas-geometricas_23-2148994274.jpg?w=600&t=st=30000~exp=1697384234~hmac=e710b63a93a866f444e55a26959330424795fe1177c399ca06c4ae637718c62f" width="300" height="200" alt="Cuatro plantas verdes de diferentes formas colocadas cada una encima de una mesa blanca con un fondo color rosa pastel"class="box1">
-    <img src="https://img.freepik.com/fotos-premium/mujer-manos-belleza-flores-rosas-estan-sobre-mesa-cosmetico-natural-cuidado-piel-manos-maquillaje-moda_91497-4895.jpg?w=740"width="300" height="200" alt="Flores alrededor de las manos de una mujer y un fondo color crema con petalos dispersos"class="box2">
-    <img src="https://img.freepik.com/fotos-premium/ilustracion-generada-ia-diseno-inspirado-moodboard-simple-paleta-color-verde_665346-31910.jpg?w=740" width="300" height="200" alt="Plantas con diferentes decoraciones de figuras geometricas de color marron y verde"class="box3">
-  </div>
+    <div class="images">
+      <img src="https://img.freepik.com/foto-gratis/concepto-sostenibilidad-plantas-que-crecen-partir-formas-geometricas_23-2148994274.jpg?w=600&t=st=30000~exp=1697384234~hmac=e710b63a93a866f444e55a26959330424795fe1177c399ca06c4ae637718c62f" width="300" height="200" alt="Cuatro plantas verdes de diferentes formas colocadas cada una encima de una mesa blanca con un fondo color rosa pastel"class="box1">
+      <img src="https://img.freepik.com/fotos-premium/mujer-manos-belleza-flores-rosas-estan-sobre-mesa-cosmetico-natural-cuidado-piel-manos-maquillaje-moda_91497-4895.jpg?w=740"width="300" height="200" alt="Flores alrededor de las manos de una mujer y un fondo color crema con petalos dispersos"class="box2">
+      <img src="https://img.freepik.com/fotos-premium/ilustracion-generada-ia-diseno-inspirado-moodboard-simple-paleta-color-verde_665346-31910.jpg?w=740" width="300" height="200" alt="Plantas con diferentes decoraciones de figuras geometricas de color marron y verde"class="box3">
+    </div>
 
 
- <section class="contenido">
-    <h2>Nuevos productos a la venta hechos para ti</h2>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-    </p>
- </section>
+    <section >
+      <h2>Nuevos productos a la venta hechos para ti</h2>
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+      </p>
+    </section>
 
-  <section>
-    <h2>Hecha un vistazo a lo que tenemos para ofrecerte</h2>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-  </section>
+   <section class="right">
+     <h2>Hecha un vistazo a lo que tenemos para ofrecerte</h2>
+     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+   </section>
 
-  <div>
-   <img src="https://img.freepik.com/foto-gratis/composicion-productos-cuidado-personal-natural-laicos-plana_23-2148990019.jpg?w=360&t=st=30000~exp=1697385169~hmac=c7b9ff30b8c1a5a8ed6a6f1c01f2ee2d2c1eb63b0cd6ed28db02dcc25c90de00" alt="">
-   <img src="https://img.freepik.com/foto-gratis/arreglo-plano-gua-sha-productos-cuidado_23-2149322586.jpg?w=360&t=st=30000~exp=1697384231~hmac=3be44f1194db3fcc08d8f09e35d288e9bbcd3bf6768404dfd848e0a9591f8f38" width="270" height="230" alt="">
-   <img src="https://img.freepik.com/foto-gratis/composicion-productos-cuidado-personal-natural-vista-superior_23-2148990011.jpg?w=360&t=st=30000~exp=1697385161~hmac=eb1d75bfbcd1882ffce5526e88ae45ec047f7f83b226f662786a47295f2cfe7f 
-    " width="270" height="230" alt="">
-   <img src="https://img.freepik.com/foto-gratis/composicion-productos-cuidado-personal-natural-laicos-plana_23-2148990016.jpg?w=271&t=st=30000~exp=1697384357~hmac=4c371814508465d741d4c665502c75c6ec25fbad6c7b5681de8fbb8465c955b3" width="270" height="230" alt="">
- </div>
+   <div class="images">
+     <img src="https://img.freepik.com/foto-gratis/composicion-productos-cuidado-personal-natural-laicos-plana_23-2148990019.jpg?w=360&t=st=30000~exp=1697385169~hmac=c7b9ff30b8c1a5a8ed6a6f1c01f2ee2d2c1eb63b0cd6ed28db02dcc25c90de00" alt="">
+     <img src="https://img.freepik.com/foto-gratis/arreglo-plano-gua-sha-productos-cuidado_23-2149322586.jpg?w=360&t=st=30000~exp=1697384231~hmac=3be44f1194db3fcc08d8f09e35d288e9bbcd3bf6768404dfd848e0a9591f8f38" width="270" height="230" alt="">
+     <img src="https://img.freepik.com/foto-gratis/composicion-productos-cuidado-personal-natural-vista-superior_23-2148990011.jpg?w=360&t=st=30000~exp=1697385161~hmac=eb1d75bfbcd1882ffce5526e88ae45ec047f7f83b226f662786a47295f2cfe7f 
+      " width="270" height="230" alt="">
+     <img src="https://img.freepik.com/foto-gratis/composicion-productos-cuidado-personal-natural-laicos-plana_23-2148990016.jpg?w=271&t=st=30000~exp=1697384357~hmac=4c371814508465d741d4c665502c75c6ec25fbad6c7b5681de8fbb8465c955b3" width="270" height="230" alt="">
+    </div>
 
-</main>
+  </main>
 
-<footer>
-  <section>
-    <h2>Unete a nosotros</h2>
-    <p>Loren jgghhhhhhhgh</p>
+ <footer class="footer">
+   <section>
+     <h2>Unete a nosotros</h2>
+     <p>Loren Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 
-    <form action="/" method="get">
-     <input type="text" name="minombre"required>
-     <input type="email" name="miEmail" required>
-     <input type="password" name="miContraseña"required>
-     <input type="number" name="miEdad"required>
+     <form action="/" method="get">
+       <input type="text" name="minombre"required>
+       <input type="email" name="miEmail" required>
+       <input type="password" name="miContraseña"required>
+       <input type="number" name="miEdad"required>
     
-     <button type="submit">Enviar</button>
-    </form>
-
- </section>
-  <div>
-   <img src="assets/images/logo.png" width="100" height="70" alt="Representación visual de la marca">
-   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-  </div>
-
-
-  <ul>
-    <li>Inicios</li>
-    <li>Servicios</li>
-    <li>Sobre nosotros</li>
-  </ul>
+       <button class="button" type="submit">Enviar</button>
+     </form>
+   </section>
+  
+   <nav class="navbar2">
+      <div>
+        <img src="assets/images/logo.png" width="100" height="70" alt="Representación visual de la marca">
+        <p>Lorem Ipsum is simply dummy text of the printing</p>
+      </div>
 
 
-  <div>
-   <img src="https://cdn-icons-png.flaticon.com/512/81/81609.png" width="60" height="50" alt="Representacion visual de la red social Twitter ">
-   <img src="https://static.vecteezy.com/system/resources/previews/023/986/470/non_2x/facebook-logo-facebook-logo-transparent-facebook-icon-transparent-free-free-png.png" width="70" height="60"alt="Representacion visual de la red social Facebook">
-   <img src="https://seeklogo.com/images/W/whatsapp-logo-112413FAA7-seeklogo.com.png" "width="60" height="50" alt="Representacion visual de la red social Whatsaap">
-   <img src="https://cdn.icon-icons.com/icons2/38/PNG/512/linkedin_social_5085.png "width="60" height="50"  alt="Representacion visual de la red social Linkedin">
-   <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png " width="60" height="50" alt="Representacion visual del repositorio online Github">
-   <img src="https://i.pinimg.com/originals/7d/bd/0b/7dbd0b51c20a695901a84c4c083500f6.png" width="60" height="50" alt="Representacion visual de la red social Instagram ">
-  </div>
-   
-</footer>
+     <ul class="list2">
+       <li>Inicios</li>
+       <li>Servicios</li>
+       <li>Sobre nosotros</li>
+      </ul>
+
+
+     <div>
+       <img src="https://cdn-icons-png.flaticon.com/512/81/81609.png" width="60" height="50" alt="Representacion visual de la red social Twitter ">
+       <img src="https://static.vecteezy.com/system/resources/previews/023/986/470/non_2x/facebook-logo-facebook-logo-transparent-facebook-icon-transparent-free-free-png.png" width="70" height="60"alt="Representacion visual de la red social Facebook">
+       <img src="https://seeklogo.com/images/W/whatsapp-logo-112413FAA7-seeklogo.com.png" "width="60" height="50" alt="Representacion visual de la red social Whatsaap">
+       <img src="https://cdn.icon-icons.com/icons2/38/PNG/512/linkedin_social_5085.png "width="60" height="50"  alt="Representacion visual de la red social Linkedin">
+       <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png " width="60" height="50" alt="Representacion visual del repositorio online Github">
+       <img src="https://i.pinimg.com/originals/7d/bd/0b/7dbd0b51c20a695901a84c4c083500f6.png" width="60" height="50" alt="Representacion visual de la red social Instagram ">
+      </div>
+   </nav>
+ </footer>
 
 </body>
 </html>
