--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   
     <header class="header"> 
         <nav class="navbar"> 
-            <img src="assets/images/logo.png" width="100" height="70" alt="Representación visual de la marca">
+            <img  class="logo" src="assets/images/logo.png" width="70" height="50" alt="Representación visual de la marca">
 
             <ul class="list">
                 <li>Inicios</li>
@@ -54,38 +54,38 @@
  <main>
    <section class="jumbotron"> 
      <h1>Jumbotron de la pagina principal</h1>
-     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500</p>
+     <p>¿Estás buscando productos que sean buenos para tu salud y belleza? ¿Quieres cuidarte sin dañar el medio ambiente? Entonces, los productos orgánicos y cosméticos son la mejor opción para ti.</p>
      <button class="button">Únete a nosotros</button>
     </section>
 
 
     <div class="images">
       <ul>
-        <img src="https://img.freepik.com/foto-gratis/concepto-sostenibilidad-plantas-que-crecen-partir-formas-geometricas_23-2148994274.jpg?w=600&t=st=30000~exp=1697384234~hmac=e710b63a93a866f444e55a26959330424795fe1177c399ca06c4ae637718c62f" width="500" height="140" alt="Cuatro plantas verdes de diferentes formas colocadas cada una encima de una mesa blanca con un fondo color rosa pastel"class="box1">
-        <img src="https://img.freepik.com/fotos-premium/mujer-manos-belleza-flores-rosas-estan-sobre-mesa-cosmetico-natural-cuidado-piel-manos-maquillaje-moda_91497-4895.jpg?w=740"width="500" height="140" alt="Flores alrededor de las manos de una mujer y un fondo color crema con petalos dispersos"class="box2">
+        <img src="https://img.freepik.com/foto-gratis/concepto-sostenibilidad-plantas-que-crecen-partir-formas-geometricas_23-2148994274.jpg?w=600&t=st=30000~exp=1697384234~hmac=e710b63a93a866f444e55a26959330424795fe1177c399ca06c4ae637718c62f" width="500" height="130" alt="Cuatro plantas verdes de diferentes formas colocadas cada una encima de una mesa blanca con un fondo color rosa pastel"class="box1">
+        <img src="https://img.freepik.com/fotos-premium/mujer-manos-belleza-flores-rosas-estan-sobre-mesa-cosmetico-natural-cuidado-piel-manos-maquillaje-moda_91497-4895.jpg?w=740"width="500" height="130" alt="Flores alrededor de las manos de una mujer y un fondo color crema con petalos dispersos"class="box2">
       </ul>
-        <img src="https://img.freepik.com/fotos-premium/ilustracion-generada-ia-diseno-inspirado-moodboard-simple-paleta-color-verde_665346-31910.jpg?w=740" width="400" height="280" alt="Plantas con diferentes decoraciones de figuras geometricas de color marron y verde"class="box3">
+        <img src="https://img.freepik.com/fotos-premium/ilustracion-generada-ia-diseno-inspirado-moodboard-simple-paleta-color-verde_665346-31910.jpg?w=740" width="350" height="300" alt="Plantas con diferentes decoraciones de figuras geometricas de color marron y verde" class="box3">
     </div>
 
 
     <section class="left">
       <h2>Nuevos productos a la venta hechos para ti</h2>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+      <p>Los productos orgánicos están hechos con ingredientes naturales, sin pesticidas ni fertilizantes químicos. Esto los hace más seguros para tu salud y para el medio ambiente. Además, los productos orgánicos suelen ser más nutritivos que los productos convencionales.
       </p>
     </section>
 
    <section class="right">
      <h2>Hecha un vistazo a lo que tenemos para ofrecerte</h2>
-     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+     <p>Entre los productos que ofrecemos, tenemos: Cremas faciales, Cremas corporales, Jabones, Champús, Acondicionadores, Maquillaje y mucho mas. Todo con el fin de satisfacer las necesidades de diferentes clientes. Por ejemplo, puede ofrecer productos para personas que buscan una dieta saludable, personas que buscan productos para el cuidado de la piel sensibles, personas que buscan productos para el cuidado del cabello naturales</p>
    </section>
 
    <div class="imagesdown">
      <img src="https://img.freepik.com/foto-gratis/composicion-productos-cuidado-personal-natural-laicos-plana_23-2148990019.jpg?w=360&t=st=30000~exp=1697385169~hmac=c7b9ff30b8c1a5a8ed6a6f1c01f2ee2d2c1eb63b0cd6ed28db02dcc25c90de00" width="400" height="200" alt="">
      <ul>
-       <img src="https://img.freepik.com/foto-gratis/arreglo-plano-gua-sha-productos-cuidado_23-2149322586.jpg?w=360&t=st=30000~exp=1697384231~hmac=3be44f1194db3fcc08d8f09e35d288e9bbcd3bf6768404dfd848e0a9591f8f38" width="270" height="230" alt="">
+       <img src="https://img.freepik.com/foto-gratis/arreglo-plano-gua-sha-productos-cuidado_23-2149322586.jpg?w=360&t=st=30000~exp=1697384231~hmac=3be44f1194db3fcc08d8f09e35d288e9bbcd3bf6768404dfd848e0a9591f8f38" width="250" height="270" alt="">
        <img src="https://img.freepik.com/foto-gratis/composicion-productos-cuidado-personal-natural-vista-superior_23-2148990011.jpg?w=360&t=st=30000~exp=1697385161~hmac=eb1d75bfbcd1882ffce5526e88ae45ec047f7f83b226f662786a47295f2cfe7f 
-        " width="270" height="230" alt="">
-       <img src="https://img.freepik.com/foto-gratis/composicion-productos-cuidado-personal-natural-laicos-plana_23-2148990016.jpg?w=271&t=st=30000~exp=1697384357~hmac=4c371814508465d741d4c665502c75c6ec25fbad6c7b5681de8fbb8465c955b3" width="270" height="230" alt="">
+        " width="250" height="270" alt="">
+       <img src="https://img.freepik.com/foto-gratis/composicion-productos-cuidado-personal-natural-laicos-plana_23-2148990016.jpg?w=271&t=st=30000~exp=1697384357~hmac=4c371814508465d741d4c665502c75c6ec25fbad6c7b5681de8fbb8465c955b3" width="250" height="270" alt="">
       </ul>
     </div>
 
@@ -94,7 +94,7 @@
  <footer class="footer">
    <section>
      <h2>Unete a nosotros</h2>
-     <p>Loren Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+     <p>Si quieres cuidarte y a tu planeta, los productos orgánicos y cosméticos son la mejor opción. Te ofrecemos una amplia variedad de productos orgánicos y cosméticos de alta calidad</p>
 
      <form action="/" method="get">
        <input type="text" name="minombre"required>
@@ -102,14 +102,14 @@
        <input type="password" name="miContraseña"required>
        <input type="number" name="miEdad"required>
     
-       <button class="button" type="submit">Enviar</button>
+       <button class="button-" type="submit">Enviar Solicitud</button>
      </form>
    </section>
   
    <nav class="navbar2">
       <div>
-        <img src="assets/images/logo.png" width="100" height="70" alt="Representación visual de la marca">
-        <p>Lorem Ipsum is simply dummy text of the printing</p>
+        <img class="logo" src="assets/images/logo.png" width="70" height="50" alt="Representación visual de la marca">
+        <p>Productos organicos y saludables para ti</p>
       </div>
 
 
